--- a/lang/ua/ua.json
+++ b/lang/ua/ua.json
@@ -84,6 +84,7 @@
   "locale": "uk-UA",
   "submit_btn": "Надіслати",
   "logout_btn": "Вихід",
+  "details_btn": "Детальніше",
 
   "auth.valid.email.format": "Неправильний формат",
   "auth.valid.email.required": "Електронна пошта обов'язкова",
