--- a/lang/ua/ua.json
+++ b/lang/ua/ua.json
@@ -34,6 +34,9 @@
   "ships.type": "Тип",
   "ships.build_year": "Рік побудови",
   "ships.create": "Додати новий корабель",
+  "ships.header_text": "Ласкаво просимо до Системи управління судновими відходами! Ця платформа дозволяє ефективно управляти відходами на суднах. Використовуйте рядок пошуку вище, щоб знайти конкретні судна за їхніми назвами і отримати доступ до їхньої інформацію про управління відходами. Ознайомтеся з детальними картками суден. За допомогою нашої системи ви можете забезпечити належне поводження з відходами і сприяти збереженню чистоти морського середовища. Почніть ефективно управляти судновими відходами вже сьогодні. Разом ми зможемо змінити ситуацію!",
+
+
   "ship.report": "Створити звіт",
   "ship.delete": "Видалити",
   "ship.waste_types": "Типи відходів",
@@ -80,6 +83,14 @@
   "settings.profile": "Профіль",
   "settings.title": "Налаштування",
   "settings.save_btn": "Зберегти",
+
+  "profile.info": "Інформація про профіль",
+  "profile.crew": "Член екіпажу",
+  "profile.assignment": "Призначений",
+  "profile.ship": "Корабель",
+  "profile.ship_name": "Назва корабля",
+  "profile.assigned_from": "Призначено від",
+  "profile.no_ship_assigned": "Не призначено",
 
   "locale": "uk-UA",
   "submit_btn": "Надіслати",
